# netsock

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
examples/: get_netstat.rs  serialize.rs
src/: error.rs  family.rs  lib.rs  process.rs  protocol.rs  socket.rs  state.rs
src/sys/: mod.rs  shared.rs
src/sys/freebsd/: ffi.rs  mod.rs  netstat.rs  proc.rs
src/sys/linux/: mod.rs  netlink_iter.rs  procfs.rs
src/sys/linux/ext/: state_ext.rs
src/sys/linux/ffi/: enums.rs  macros.rs  mod.rs  structs.rs  types.rs
src/sys/macos/: mod.rs  netstat.rs  proc.rs
src/sys/macos/ext/: mod.rs  state_ext.rs
src/sys/macos/ffi/: libproc.rs
src/sys/windows/: mod.rs  proc.rs  socket_table.rs  socket_table_extended.rs  socket_table_iterator.rs
src/sys/windows/ext/: state_ext.rs
src/sys/windows/ffi/: enums.rs  iphlpapi.rs  structs.rs  structs_extended.rs
