[package]
name = "netsock"
version = "0.0.1"
edition = "2021"
authors = ["shellrow <shellrow@foctet.com>"]
description = "Cross-platform library for network sockets information"
readme = "README.md"
repository = "https://github.com/shellrow/netsock"
license = "MIT"
keywords = ["network", "socket"]
categories = ["network-programming", "os"]

[dependencies]
bitflags = "2.5"
thiserror = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
once_cell = "1.19.0"
rustix = {version = "0.38.31", features = ["fs"]}

[target.'cfg(target_os = "macos")'.dependencies]
num-derive = "0.4"
num-traits = "0.2"
byteorder = "1.5.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.54.0", features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp"] }

[[example]]
name = "get_netstat"
path = "examples/get_netstat.rs"
