[package]
name = "netsock"
version = "0.4.0"
edition = "2021"
authors = ["shellrow <shellrow@foctal.com>"]
description = "Cross-platform library for network sockets information"
readme = "README.md"
repository = "https://github.com/shellrow/netsock"
license = "MIT"
keywords = ["network", "socket"]
categories = ["network-programming", "os"]

[dependencies]
bitflags = "2.9"
thiserror = "2.0"
log = "0.4"
serde = { version = "1", features = ["derive"], optional = true }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
netlink-sys = "0.8"
netlink-packet-core = "0.7"
netlink-packet-utils = "0.5"
netlink-packet-sock-diag = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
num-derive = "0.4"
num-traits = "0.2"
byteorder = "1.5"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59"
features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp"]

[dev-dependencies]
serde_json = "1.0"

[features]
serde = ["dep:serde"]

[[example]]
name = "get_netstat"
path = "examples/get_netstat.rs"

[[example]]
name = "serialize"
path = "examples/serialize.rs"
required-features = ["serde"]
